--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.4",
     "style-loader": "^1.2.1",
-    "webpack-cli": "^3.3.12"
+    "styled-components": "^6.1.13",
+    "webpack-cli": "^6.0.1"
   },
   "jest": {
     "moduleNameMapper": {
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@testing-library/react": "^11.0.4",
@@ -50,8 +52,8 @@
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.4.2",
     "react-test-renderer": "^16.13.1",
-    "webpack": "^4.44.2",
-    "webpack-dev-server": "^3.11.0",
+    "webpack": "^5.97.1",
+    "webpack-dev-server": "^5.2.0",
     "xml-js": "^1.6.11"
   }
 }
